# hexagon

./: .env.example  .gitignore  Cargo.toml  docker-compose.yaml  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yaml
.sqlx/: query-25204f97cbeb16f49921bc192fb5e92c6cc4c1efeac7146e4a328fff35c28ede.json  query-26fdd5cd12eb1a46ac497e3c08cbf092f9947d66e172947831692bb1c2f8b192.json  query-96d7f1915aad933c9ba9a4c32a96cd38d5c881917f79c1e5beb28c2174210832.json  query-f8e646073801ad6a954bd12623f4a94c61a13c251e3af820015a18068e7eb3d0.json
config/: deployment.yaml  development.yaml  local.yaml  production.yaml
migrations/: 0_create_users.up.sql
src/: config.rs  lib.rs  telemetry.rs  test_app.rs
src/adapters/: argon2.rs  mod.rs
src/adapters/database/: mod.rs
src/adapters/database/memory/: mod.rs  users.rs
src/adapters/database/postgresql/: mod.rs  users.rs
src/adapters/memory/: users.rs
src/adapters/mocks/: database.rs  hash.rs
src/adapters/mysql/: mod.rs  users.rs
src/adapters/postgresql/: mod.rs  users.rs
src/api/: app.rs  mod.rs
src/api/http/: auth.rs  error_response.rs  health_check.rs  mod.rs  numbers.rs
src/app/: mod.rs  numbers.rs  testable.rs  users.rs
src/domain/: email.rs  error.rs  id.rs  mod.rs  password.rs  secret.rs  sensitive.rs  token.rs  user.rs  verification_token.rs
src/ports/: hash.rs  mod.rs
src/ports/database/: mod.rs  users.rs
src/services/: mod.rs
src/services/database/: another.rs  in_memory.rs  mod.rs
tests/http/: health_check.rs  main.rs
