[package]
name = "hexagon"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "Stanislav Stoyanov <grimerssy@gmail.com>"
]

[features]
log-tests = []

[dependencies]
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }

anyhow = "1.0.72"
thiserror = "1.0.44"

async-trait = "0.1.72"
once_cell = "1.18.0"
secrecy = { version = "0.8.0", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

config = { version = "0.13.3", default-features = false, features = ["yaml"] }
strum = "0.25"
strum_macros = "0.25"

serde = { version = "1.0.183", features = ["derive"] }
serde_with = "3.2.0"
serde-aux = { version = "4.2.0", default-features = false }

axum = { version = "0.6.20", features = ["macros"] }
sqlx = { version = "0.7.1", features = ["uuid", "runtime-tokio-rustls", "postgres"] }
